# south-africa-street-history-mapping

./: .gitignore  CITATION.cff  README.md  pyproject.toml
notebooks/: data-analysis.ipynb  data-download.ipynb  geofabrik-sandbox.ipynb  johannesburg-dictionary-analysis.ipynb  johannesburg-osmnx-sandbox.ipynb  osmnx-sandbox.ipynb  plotting-places.ipynb  street-origin-mapping.ipynb  ward-results.ipynb
notebooks/archived/: average-income.ipynb  johannesburg-osmnx-sandbox.ipynb  street-color-mapping-sandbox.ipynb
scripts/: 1_retrieve-streets.sbatch  2_process-streets.sbatch  3_build-dictionary-south-africa.sbatch  4_sequential_mapping_of_specific_locations.sh  gdal-convert-osm-to-sql.sh  geofabrik-download-locations.sh  geofabrik-list-locations.sh  retrieve-streets.sbatch
src/dictionary_builder/: build_dictionary_for_term.py  extract_country_from_args.py  initialise_terms_table.py  main.py  main.slurm.py
src/lookup_language/: lookup_word.py  main.py
src/mapping/: calculate_length_by_origin.py  country_colour_map.py  lookup_origin.py  main.py  map-e2e.py  map_e2e.py  stop_terms.py
src/street_list_download/: download_country_streets.py  main.py  main.slurm.py
src/street_list_preprocessing/: get_country_street_files.py  main.py  main.slurm.py  preprocess_country_streets.py
src/street_list_retrieval/: country_iso_map.py  main.py  main.slurm.py  retrieve_and_process_country.py
src/utils/: __init__.py  country_colour_map.py  enum.py  env_variables.py  hidden_print.py  logger.py  lookup_origin.py
