[tool.poetry]
name = "south-africa-street-history-mapping"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
license = "GPL3.0"
readme = "README.md"
packages = [{include = "south_africa_street_history_mapping"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
