[tool.poetry]
name = "south-africa-street-history-mapping"
version = "0.1.0"
description = ""
authors = ["Emily-Rose Steyn <emilyrosesteyn@gmail.com>"]
license = "GPL3.0"
readme = "README.md"
packages = [{include = "south_africa_street_history_mapping"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.3"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
plotnine = "^0.12.4"
jupyter = "^1.0.0"
osmnx = "^1.9.1"
osmium = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
